<resources>
    <string name="app_name">PhotoPicker</string>
    <string name="action_settings">Settings</string>
    <string name="action_pickImage">Gallery</string>
    <string name="enter_uour_text">Enter Your Text</string>
    <string name="choose_text_color">Choose Text Color</string>
    <string name="Red">Red</string>
    <string name="Blue">Blue</string>
    <string name="Green">Green</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>
